<resources>
    <string name="SHARED_PREFS">edu.uw.tcss450.group4.PREFS</string>
    <string name="IS_LOGGED_IN">loggedInStatus</string>
    <string name="LOGGED_USER">loggedInUsername</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="nav_drawer_items">
        <item>Recipe Search</item>
        <item>Ingredient Inventory</item>
        <item>Shopping List</item>
        <item>Log Out</item>
    </string-array>
    <string name="app_name">GroceryPal</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirmPassword">confirm password</string>
    <string name="welcome">Welcome</string>
    <string name="searchHint">search by ingredient or recipe name</string>
    <string name="search">Search Recipes</string>
    <string name="radioPlanner">Meal Planner</string>
    <string name="radioSearch">Search</string>
    <string name="radioFav">Favs</string>
    <string name="mealPlanner">Meal Planner</string>
    <string name="date_picker_title">Meal Planner</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="btn_shoppingList">Shopping List</string>
    <string name="btn_inventory">Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="text_add">Add</string>
    <string name="text_remove">Remove</string>
    <string name="text_addIngredientsToList"> Add Ingredients to List</string>
    <string name="text_save">Save</string>
    <string name="text_load">Load</string>
    <string name="text_export">Export</string>
    <string name="text_shopList">Shopping List:</string>
    <string name="text_clearAll">Clear All</string>
    <string name="ingredient_text">Search for recipes containing:</string>
    <string-array name="auto_complete_cuisine">
        <item>American</item>
        <item>Asian</item>
        <item>Barbecue</item>
        <item>Chinese</item>
        <item>Cuban</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hawaiin</item>
        <item>Hungarian</item>
        <item>Italian</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Japanese</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Moroccan</item>
        <item>Portugese</item>
        <item>Southwestern</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Thai</item>
    </string-array>
    <string-array name="auto_complete_course">
        <item>Appetizers</item>
        <item>Breads</item>
        <item>Breakfast and Brunch</item>
        <item>Beverages</item>
        <item>Condiments and Sauces</item>
        <item>Cocktails</item>
        <item>Desserts</item>
        <item>Lunch and Snacks</item>
        <item>Main Dishes</item>
        <item>Salads</item>
        <item>Side Dishes</item>
        <item>Soups</item>
    </string-array>
    <string-array name="auto_complete_holiday">
        <item>Christmas</item>
        <item>Halloween</item>
        <item>Hanukkah</item>
        <item>New Year</item>
        <item>Summer</item>
        <item>Super Bowl / Game Day</item>
        <item>Thanksgiving</item>
        <item>4th of July</item>
    </string-array>
    <string-array name="auto_complete_diet">
        <item>Lacto vegetarian</item>
        <item>Ovo vegetarian</item>
        <item>Pescetarian</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>
    <string-array name="auto_complete_allergy">
        <item>Dairy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Peanut</item>
        <item>Seafood</item>
        <item>Sesame</item>
        <item>Soy</item>
        <item>Sulfite</item>
        <item>Tree Nut</item>
        <item>Wheat</item>
    </string-array>
</resources>