<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:text="GroceryPal"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines='1'
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLines='1'
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/goRegisterBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/black" />


    </LinearLayout>

</FrameLayout>

