
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shopping_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="group4.tcss450.uw.edu.grocerypal450.fragment.ShoppingListFragment"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:weightSum="1">

        <AutoCompleteTextView
            android:layout_width="168dp"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/text_addIngredientsToList"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:completionThreshold="2"
            android:id="@+id/shopListEditTextSearch"
            android:layout_weight="0.75" />

        <Button
            android:text="@string/text_add"
            android:textColor="@color/black"
            android:background="@drawable/btnshoppingcustom"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/shopListBtnAdd" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <Button
            android:text="@string/text_remove"
            android:textColor="@color/black"
            android:background="@drawable/btnshoppingcustom"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/shopListBtnRemove" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/text_shopList"
            android:textColor="@color/black"
            android:layout_width="129dp"
            android:layout_height="wrap_content"

            android:layout_weight="0.76" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.22" />

        <Button
            android:layout_width="49dp"
            android:layout_height="42dp"
            android:id="@+id/shopListBtnClear"
            android:background="@drawable/ic_close_black_48dp"/>
    </LinearLayout>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:id="@+id/shopListListView"
        android:layout_weight="0.74" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/text_export"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnshoppingcustom"
            android:id="@+id/shopListBtnExport"
            android:layout_weight="0.15" />
    </LinearLayout>
</LinearLayout>
