
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight2"
    android:orientation="vertical"
    tools:context="group4.tcss450.uw.edu.grocerypal450.fragment.InventoryFragment"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:weightSum="1">

        <AutoCompleteTextView
            android:layout_width="168dp"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:hint="@string/text_addIngredientsToList"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:completionThreshold="2"
            android:id="@+id/inventoryEditText"
            android:layout_weight="0.94" />

        <Button
            android:text="@string/text_add"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/btninvencustom"
            android:id="@+id/inventoryAddBtn" />

        <Button
            android:text="@string/text_remove"
            android:textColor="@color/white"
            android:background="@drawable/btninvencustom"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/inventoryRemoveBtn" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/inventory"
            android:textColor="@color/black"
            android:layout_width="129dp"
            android:layout_height="wrap_content"

            android:layout_weight="0.56" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.36" />


        <Button
            android:layout_width="49dp"
            android:layout_height="42dp"
            android:id="@+id/inventoryClearBtn"

            android:background="@drawable/ic_close_black_48dp"
            android:layout_weight="0.03" />
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:id="@+id/inventoryListView"
        android:layout_weight="0.74" />


</LinearLayout>
